[package]
name = "roguelike"
version = "0.1.0"
authors = ["Chris Ohk <utilforever@gmail.com>"]
description = "A library to make creating roguelike games in Rust"
repository = "https://github.com/utilforever/roguelike"
readme = "README.md"
keywords = [ "roguelike", "game-development", "toolkit", "library" ]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
